--- a/styles/style.css
+++ b/styles/style.css
@@ -22,23 +22,70 @@ body {
 
 .popup {
     position: fixed;
+    top: 0px;
+    overflow: hidden;
     background-color: black;
     opacity: .5;
     display: flex;
     width: 55rem;
-    height: 100%;
+    min-height: 100%;
 }
 
 .popup__container {
     margin: auto;
+    width: 26.875rem;
+    height: 22rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
 }
 
-.popup__form {
-    
+.popup__form_title {
+    font-weight: 900;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    margin-left: 2.25rem;
+    margin-bottom: 0;
 }
 
-.form__edit_profile {
-    
+.popup__input {
+    display: flex;
+    flex-direction: column;
+    width: 22.375rem;
+    margin: auto;
+}
+
+.popup__input_name {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgb(0, 0, 0, .2);
+    margin-top: 3.375rem;
+    font-size: 1rem;
+    padding-bottom: 1rem;
+}
+
+.popup__input_subscription {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgb(0, 0, 0, .2);
+    margin-top: 2rem;
+    font-size: 1rem;
+    padding-bottom: 1rem;
+}
+
+.popup__submit {
+   display: flex;
+   margin: 3rem auto 2rem;
+}
+
+.popup__submit_button {
+    margin: auto;
+    border-radius: 2px;
+}
+
+.popup__submit_button:hover {
+   opacity: .8;
 }
 
 .header {
