--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ body {
 
 .profile__edit_button:hover {
     opacity: .6;
-    transition: 0.2s;
+    transition: .2s;
     cursor: pointer;
 }
 
@@ -80,7 +80,7 @@ body {
 
 .profile__add_button:hover {
     opacity: .6;
-    transition: 0.2s;
+    transition: .2s;
     cursor: pointer;
 }
 
@@ -130,7 +130,7 @@ body {
 
 .grid__block_bottom_like_button:hover {
     opacity: .6;
-    transition: 0.2s;
+    transition: .2s;
     cursor: pointer;
 }
 
@@ -151,7 +151,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, .5);
     display: flex;
 }
 
@@ -167,6 +167,7 @@ body {
     background-color: white;
     color: black;
     border-radius: 10px;
+    position: relative;
 }
 
 .popup__form_title {
@@ -218,4 +219,18 @@ body {
 .popup__save_button:hover {
    opacity: .8;
    cursor: pointer;
+   transition: .2s;
+}
+
+.popup__close_button {
+    position: absolute;
+    right: -38px;
+    top: -38px;
+    z-index: 99;
+}
+
+.popup__close_button:hover {
+    opacity: .6;
+    cursor: pointer;
+    transition: .2s;
 }
