--- a/styles/style.css
+++ b/styles/style.css
@@ -148,9 +148,27 @@ body {
     width: 23px;
     margin: auto;
     margin-right: 2rem;
+    
 }
 
 .grid__like_button:hover {
+    opacity: .5;
+    transition: .2s;
+    cursor: pointer;
+}
+
+.grid__like_button_active {
+    background-image: url(../img/Like\ Button\ Active.svg);
+    background-color: white;
+    border: none;
+    background-size: 100%;
+    height: 20px;
+    width: 23px;
+    margin: auto;
+    margin-right: 2rem;
+}
+
+.grid__like_button_active:hover {
     opacity: .5;
     transition: .2s;
     cursor: pointer;
@@ -175,7 +193,18 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
     display: flex;
-    visibility: hidden;
+    display: none;
+}
+
+.popup__opened {
+    display: flex;
+    position: fixed;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    
 }
 
 .popup__body {
